# rechoir

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build32.bat  build_au.sh  fetch_jamba.cmake  generateModel.js  jamba.cmake
audio-unit/: CMakeLists.txt  Info.plist  audiounitconfig.h
mac/audio-unit/: CMakeLists.txt  audiounitconfig.h
mac/audio-unit/resource/: Info.plist
resource/: plugin.rc  plugin.uidesc
resource/src/: plugin_design.psd
src/: calc.h  decimator.cpp  filter.cpp  filter.h  global.h  paramids.h  pitchshifter.cpp  pitchshifter.h  plugin_process.cpp  plugin_process.h  plugin_process.tcc  version.h  vst.cpp  vst.h  vstentry.cpp
src/ui/: controller.cpp  uimessagecontroller.h
